--- a/sale_quotation_number/views/sales_config.xml
+++ b/sale_quotation_number/views/sales_config.xml
@@ -5,9 +5,9 @@
     <record id="res_config_settings_view_config_quotation_number" model="ir.ui.view">
         <field name="name">Quotation number configuration</field>
         <field name="model">res.config.settings</field>
-        <field name="inherit_id" ref="base.res_config_settings_view_form"/>
+        <field name="inherit_id" ref="sale.res_config_settings_view_form"/>
         <field name="arch" type="xml">
-            <xpath expr='//div[hasclass("o_settings_container")][3]' position="inside">
+            <xpath expr="//div[@id='sale_config_online_confirmation_sign']/preceding::div" position="inside">
                 <div class="col-xs-12 col-md-6 o_setting_box">
                     <div class="o_setting_left_pane">
                         <field name="keep_name_so"/>
