--- a/sale_order_line_menu/views/sale_order_line_views.xml
+++ b/sale_order_line_menu/views/sale_order_line_views.xml
@@ -1,9 +1,19 @@
 <odoo>
+    <record model="ir.ui.view" id="view_order_line_tree">
+        <field name="name">sale.order.line.tree (in sale_order_line_menu)</field>
+        <field name="model">sale.order.line</field>
+        <field name="inherit_id" ref="sale.view_order_line_tree" />
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='order_id']" position="before">
+                <field name="currency_id" invisible="1" />
+            </xpath>
+        </field>
+    </record>
     <record model="ir.ui.view" id="view_sale_order_line_pivot">
         <field name="name">sale.order.line.pivot</field>
         <field name="model">sale.order.line</field>
         <field name="arch" type="xml">
-            <pivot string="Order Lines" sample="1">
+            <pivot string="Order Lines">
                 <field name="product_id" type="row" />
                 <field name="product_uom_qty" type="col" />
                 <field name="price_subtotal" type="measure" />
@@ -15,8 +25,8 @@
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">sale.order.line</field>
         <field name="view_mode">tree,pivot</field>
+        <field name="domain">[("display_type","=",False)]</field>
     </record>
-
     <menuitem
         id="sale_order_line_menu"
         name="Order Lines"
@@ -24,6 +34,4 @@
         parent="sale.sale_order_menu"
         sequence="2"
     />
-
-
 </odoo>
