--- a/sale_missing_tracking/views/res_config_settings_views.xml
+++ b/sale_missing_tracking/views/res_config_settings_views.xml
@@ -8,11 +8,8 @@
                 expr="//div[@id='sale_config_online_confirmation_sign']/.."
                 position="after"
             >
-                <h2>Missing cart products tracking</h2>
-                <div
-                    class="row mt16 o_settings_container"
-                    id="sale_missing_cart_tracking"
-                >
+                <h2>Missing products tracking</h2>
+                <div class="row mt16 o_settings_container" id="sale_missing_tracking">
                     <div class="col-12 col-lg-6 o_setting_box">
                         <div class="o_setting_right_pane">
                             <label for="sale_missing_max_delay_times" />
