[ADD] sale_order_product_recommendation: add recommended product from list view in sale order lines

--- a/sale_order_product_recommendation/views/sale_order_view.xml
+++ b/sale_order_product_recommendation/views/sale_order_view.xml
@@ -15,6 +15,17 @@
                     type="object"
                 />
             </xpath>
+            <xpath
+                expr="//control/create[@name='add_product_control']"
+                position="before"
+            >
+                <create
+                    name="add_product_recommendation_control"
+                    string="Add a recommended product"
+                    class="o_field_x2many_recommendation"
+                    context="{'open_product_recommendation': True}"
+                />
+            </xpath>
         </field>
     </record>
 </odoo>
