--- a/sale_order_product_assortment/views/sale_order_view.xml
+++ b/sale_order_product_assortment/views/sale_order_view.xml
@@ -6,50 +6,15 @@
         <field name="inherit_id" ref="sale.view_order_form" />
         <field name="arch" type="xml">
             <field name="partner_id" position="after">
-                <field name="allowed_product_ids" invisible="1" />
                 <field name="has_allowed_products" invisible="1" />
+                <field name="allowed_product_domain" invisible="1" />
             </field>
             <!-- Form -->
             <xpath
                 expr="//field[@name='order_line']/form//field[@name='product_id']"
                 position="attributes"
             >
-                <attribute name="attrs">
-                    {'invisible':[('parent.has_allowed_products', '=', True)]}
-                </attribute>
-            </xpath>
-            <xpath
-                expr="//field[@name='order_line']/form//field[@name='product_id']"
-                position="after"
-            >
-                <field
-                    name="product_allowed_id"
-                    string="Product"
-                    attrs="{'invisible':[('parent.has_allowed_products', '=', False)], 'required': [('display_type', '=', False)]}"
-                    domain="[('id', 'in', parent.allowed_product_ids)]"
-                    readonly="0"
-                />
-            </xpath>
-            <!-- Tree -->
-            <xpath
-                expr="//field[@name='order_line']/tree/field[@name='product_id']"
-                position="attributes"
-            >
-                <attribute name="attrs">
-                    {'column_invisible':[('parent.has_allowed_products', '=', True)]}
-                </attribute>
-            </xpath>
-            <xpath
-                expr="//field[@name='order_line']/tree/field[@name='product_id']"
-                position="after"
-            >
-                <field
-                    name="product_allowed_id"
-                    string="Product"
-                    attrs="{'column_invisible':[('parent.has_allowed_products', '=', False)], 'required': [('display_type', '=', False)]}"
-                    domain="[('id', 'in', parent.allowed_product_ids)]"
-                    readonly="0"
-                />
+                <attribute name="domain">parent.allowed_product_domain</attribute>
             </xpath>
         </field>
     </record>
