[14.0][UPD] sale_quick: user group to show Add button in SO

--- a/sale_quick/views/sale_view.xml
+++ b/sale_quick/views/sale_view.xml
@@ -11,6 +11,7 @@
                     string="Add"
                     type="object"
                     attrs="{'invisible': [('state', 'not in', ('draft', 'sent'))]}"
+                    groups="sale_quick.group_show_add_button"
                     class="oe_highlight"
                 />
             </field>
