[IMP] sale_order_product_recommendation_supplierinfo: Store supplierinfo in sale order lines

--- a/sale_order_product_recommendation_supplierinfo/wizards/sale_order_recommendation_view.xml
+++ b/sale_order_product_recommendation_supplierinfo/wizards/sale_order_recommendation_view.xml
@@ -14,11 +14,11 @@
                 position="before"
             >
                 <field
-                    name="vendor_id"
+                    name="supplierinfo_id"
                     attrs="{'column_invisible': [('parent.origin_recommendation', '!=', 'supplierinfo')]}"
                 />
                 <field
-                    name="vendor_comment"
+                    name="supplierinfo_comment"
                     attrs="{'column_invisible': [('parent.origin_recommendation', '!=', 'supplierinfo')]}"
                 />
             </xpath>
