--- a/sale_blanket_order/views/sale_order_views.xml
+++ b/sale_blanket_order/views/sale_order_views.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8" ?>
 <odoo>
     <record id="view_order_form" model="ir.ui.view">
         <field name="name">sale.order.from.blanket.form</field>
@@ -7,7 +7,8 @@
         <field name="arch" type="xml">
             <xpath
                 expr="//field[@name='order_line']//tree/field[@name='product_id']"
-                position="after">
+                position="after"
+            >
                 <field name="blanket_order_line" context="{'from_sale_order': True}" />
             </xpath>
             <xpath expr="//field[@name='order_line']" position="attributes">
