--- a/sale_line_partner/views/sale.xml
+++ b/sale_line_partner/views/sale.xml
@@ -1,5 +1,12 @@
 <odoo>
 
+    <record model="ir.actions.act_window" id="action_sale_line_partner">
+        <field name="type">ir.actions.act_window</field>
+        <field name="res_model">sale.order.line</field>
+        <field
+            name="domain"
+        >[('order_partner_id', 'child_of', context.get('partner_id'))]</field>
+    </record>
     <record id="view_order_form" model="ir.ui.view">
         <field name="model">sale.order</field>
         <field name="inherit_id" ref="sale.view_order_form" />
@@ -9,7 +16,7 @@
                 <button
                     class="oe_stat_button"
                     type="action"
-                    name="%(sale_order_line_input.action_sales_order_line_input)d"
+                    name="%(sale_line_partner.action_sale_line_partner)d"
                     icon="fa-product-hunt"
                     context="{'partner_id': commercial_partner_id}"
                 >
@@ -23,13 +30,10 @@
 
     <record
         model="ir.actions.act_window"
-        id="sale_order_line_input.action_sales_order_line_input"
-    >
+        id="sale_order_line_input.action_sales_order_line_input">
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">sale.order.line</field>
-        <field
-            name="domain"
-        >[('order_partner_id', 'child_of', context.get('partner_id'))]</field>
+        <field name="domain">[(1, '=', 1)]</field>
     </record>
 
 </odoo>
