--- a/sale_product_approval/views/product_exception.xml
+++ b/sale_product_approval/views/product_exception.xml
@@ -1,13 +1,12 @@
-<odoo>
-    <data>
+<odoo noupdate="1">
         <template id="exception_on_product">
             <div>Exception(s) occurred on the sale order(s):
 
                 <a
-                    data-oe-model="sale.order"
-                    href="#"
-                    t-att-data-oe-id="sale_order_ref.id"
-                >
+                data-oe-model="sale.order"
+                href="#"
+                t-att-data-oe-id="sale_order_ref.id"
+            >
                     <t t-esc="sale_order_ref.name" /></a>.
                 Manual actions may be needed.
 
@@ -16,10 +15,10 @@
                     <ul t-as="product" t-foreach="product_ref">
                         <li>
                             <a
-                                data-oe-model="sale.order"
-                                href="#"
-                                t-att-data-oe-id="sale_order_ref.id"
-                            >
+                            data-oe-model="sale.order"
+                            href="#"
+                            t-att-data-oe-id="sale_order_ref.id"
+                        >
                                 <t t-esc="sale_order_ref.name" /></a>:
 
                             <t t-esc="product.name" />
@@ -28,5 +27,4 @@
                 </div>
             </div>
         </template>
-    </data>
 </odoo>
