--- a/sale_order_secondary_unit/views/product_views.xml
+++ b/sale_order_secondary_unit/views/product_views.xml
@@ -6,13 +6,12 @@
         <field name="name">Product template Secondary Unit</field>
         <field name="model">product.template</field>
         <field name="inherit_id" ref="product.product_template_form_view" />
-        <field name="groups_id" eval="[(4, ref('uom.group_uom'))]" />
         <field name="arch" type="xml">
             <field name="uom_id" position="after">
                 <field
                     name="sale_secondary_uom_id"
-                    domain="[('product_tmpl_id', '=', id)]"
                     options="{'no_create': True}"
+                    groups="uom.group_uom"
                 />
             </field>
         </field>
