--- a/sale_order_secondary_unit/views/sale_order_views.xml
+++ b/sale_order_secondary_unit/views/sale_order_views.xml
@@ -6,26 +6,30 @@
         <field name="name">Sale Order Secondary Unit</field>
         <field name="model">sale.order</field>
         <field name="inherit_id" ref="sale.view_order_form" />
-        <field name="groups_id" eval="[(4, ref('uom.group_uom'))]" />
         <field name="arch" type="xml">
             <xpath
                 expr="//field[@name='order_line']/form//field[@name='price_subtotal']"
                 position="after"
             >
-                <field
-                    name="secondary_uom_qty"
-                    class="oe_inline oe_no_button"
-                    attrs="{'readonly': [('state', 'in', ('done', 'cancel'))]}"
-                    optional="show"
-                />
-                <field
-                    name="secondary_uom_id"
-                    class="oe_inline"
-                    domain="[('product_tmpl_id.product_variant_ids', 'in', [product_id])]"
-                    attrs="{'readonly': [('state', 'in', ('done', 'cancel'))]}"
-                    optional="show"
-                />
-                <field name="secondary_uom_unit_price" readonly="1" optional="show" />
+                <label for="secondary_uom_qty" groups="uom.group_uom" />
+                <div class="o_row" name="secondary_uom_qty" groups="uom.group_uom">
+                    <field
+                        name="secondary_uom_qty"
+                        class="oe_inline oe_no_button"
+                        widget="numeric_step"
+                        options="{'auto_select': True}"
+                        attrs="{'readonly': [('state', 'in', ('done', 'cancel'))]}"
+                    />
+                    <field
+                        name="secondary_uom_id"
+                        class="oe_inline oe_no_button"
+                        domain="['|', ('product_id', '=', product_id),
+                                    '&amp;', ('product_tmpl_id.product_variant_ids', 'in', [product_id]),
+                                             ('product_id', '=', False)]"
+                        options="{'no_create': True, 'no_open': True}"
+                        attrs="{'readonly': [('state', 'in', ('done', 'cancel'))]}"
+                    />
+                </div>
             </xpath>
             <xpath
                 expr="//field[@name='order_line']/tree//field[@name='product_uom_qty']"
@@ -34,13 +38,33 @@
                 <field
                     name="secondary_uom_qty"
                     attrs="{'readonly': [('parent.state', 'in', ('done', 'cancel'))]}"
+                    groups="uom.group_uom"
                 />
                 <field
                     name="secondary_uom_id"
-                    domain="[('product_tmpl_id.product_variant_ids', 'in', [product_id])]"
+                    domain="['|', ('product_id', '=', product_id),
+                                '&amp;', ('product_tmpl_id.product_variant_ids', 'in', [product_id]),
+                                         ('product_id', '=', False)]"
                     options="{'no_create': True}"
                     attrs="{'readonly': [('parent.state', 'in', ('done', 'cancel'))]}"
+                    groups="uom.group_uom"
                 />
+            </xpath>
+            <xpath
+                expr="//field[@name='order_line']/kanban//field[@name='company_id']"
+                position="after"
+            >
+                <field name="secondary_uom_id" invisible="1" />
+                <field name="secondary_uom_qty" invisible="1" />
+            </xpath>
+            <xpath
+                expr="//field[@name='order_line']/kanban//t[@t-out='record.product_uom_qty.value']"
+                position="before"
+            >
+                <t t-if="record.secondary_uom_id.value">
+                    <t t-esc="record.secondary_uom_qty.value" groups="uom.group_uom" />
+                    <t t-esc="record.secondary_uom_id.value" groups="uom.group_uom" />
+                </t>
             </xpath>
         </field>
     </record>
