[16.0][FIX] sale_exception, fixes decoration-danger cases
It happens that exception_ids is always being evaluated as True,
so the condition 'not ignore_exception and exception_ids' is not
behaving as excepting

--- a/sale_exception/views/sale_view.xml
+++ b/sale_exception/views/sale_view.xml
@@ -65,13 +65,13 @@
                 </div>
             </xpath>
             <xpath expr="//field[@name='order_line']/tree" position="inside">
-                <field name="exception_ids" invisible="1" />
+                <field name="has_exception" invisible="1" />
                 <field name="ignore_exception" invisible="1" />
             </xpath>
             <xpath expr="//field[@name='order_line']/tree" position="attributes">
                 <attribute
                     name="decoration-danger"
-                >not ignore_exception and exception_ids</attribute>
+                >not ignore_exception and has_exception</attribute>
             </xpath>
         </field>
     </record>
