[REF] sale_purchase_requisition: usability improvements
- Don't depend on `sale_management`, as that module adds no required features. Instead, just recommend installing it to be able to use those features.
- Rename purchase requisition sync warning field and compute method to make it more meaningful and standard.
- Only let salesperson modify purchase requisition while it's in draft.
- Move tests to `SavepointCase`, for performance.
- Let those salesperson that can see all leads interact with all purchase requisitions related to a sales order, just like if they were the assigned salesperson.
- Increase test coverage with a full flow to check sync and unsync behaviors.

@moduon MT-2554

--- a/sale_purchase_requisition/views/purchase_requisition.xml
+++ b/sale_purchase_requisition/views/purchase_requisition.xml
@@ -24,9 +24,9 @@
                     id="warning_order_lines_notsync"
                     class="alert alert-danger mb-0"
                     role="alert"
-                    attrs="{'invisible': [('purchase_requisition_sync_warning', '=', False)]}"
+                    attrs="{'invisible': [('sale_order_sync_warning', '=', False)]}"
                 >
-                    <field name="purchase_requisition_sync_warning" />
+                    <field name="sale_order_sync_warning" />
                 </div>
             </xpath>
         </field>
