--- a/sale_order_product_recommendation/wizards/sale_order_recommendation_view.xml
+++ b/sale_order_product_recommendation/wizards/sale_order_recommendation_view.xml
@@ -17,7 +17,7 @@
                         <field name="sale_recommendation_price_origin" />
                         <field name="use_delivery_address" />
                     </group>
-                    <group>
+                    <group col="2">
                         <field name="line_ids" nolabel="1" mode="tree,kanban">
                             <tree create="0" delete="0" editable="top">
                                 <field name="currency_id" invisible="1" />
