--- a/sale_order_line_packaging_qty/views/sale_order.xml
+++ b/sale_order_line_packaging_qty/views/sale_order.xml
@@ -8,7 +8,7 @@
         <field name="arch" type="xml">
             <!-- sale.order.line form view -->
             <xpath
-                expr="//field[@name='order_line']//form//field[@name='product_packaging']"
+                expr="//field[@name='order_line']//form//field[@name='product_packaging_id']"
                 position="attributes"
             >
                 <attribute
@@ -16,18 +16,18 @@
                 >{'invisible': [('product_id', '=', False)], 'required': [('product_packaging_qty', '!=', 0)]}</attribute>
             </xpath>
             <xpath
-                expr="//field[@name='order_line']//form//field[@name='product_packaging']"
+                expr="//field[@name='order_line']//form//field[@name='product_packaging_id']"
                 position="after"
             >
                 <field
                     name="product_packaging_qty"
                     groups="product.group_stock_packaging"
-                    attrs="{'invisible': [('product_packaging', '=', False)]}"
+                    attrs="{'invisible': [('product_packaging_id', '=', False)]}"
                 />
             </xpath>
             <!-- sale.order.line tree view -->
             <xpath
-                expr="//field[@name='order_line']//tree//field[@name='product_packaging' and @optional='show']"
+                expr="//field[@name='order_line']//tree//field[@name='product_packaging_id' and @optional='show']"
                 position="replace"
             />
             <xpath
@@ -35,7 +35,7 @@
                 position="before"
             >
                 <field
-                    name="product_packaging"
+                    name="product_packaging_id"
                     attrs="{'invisible': [('product_id', '=', False)]}"
                     context="{'default_product_id': product_id, 'tree_view_ref':'product.product_packaging_tree_view', 'form_view_ref':'product.product_packaging_form_view'}"
                     domain="[('product_id','=',product_id), ('qty', '&gt;', 0)]"
@@ -45,7 +45,7 @@
                 <field
                     name="product_packaging_qty"
                     groups="product.group_stock_packaging"
-                    attrs="{'invisible': [('product_packaging', '=', False)]}"
+                    attrs="{'invisible': [('product_packaging_id', '=', False)]}"
                 />
             </xpath>
         </field>
