[IMP] Option to base the sale_price on sale_uom_id
The default sale price was based on uom_id
An option to based on sale_uom_id ( when this is set ) is created with a boolean tick box.
Making it easier and more accurate on decimals, useful on big quantities and rare uom Factors.

--- a/sale_default_uom/views/product_template_view.xml
+++ b/sale_default_uom/views/product_template_view.xml
@@ -19,6 +19,7 @@
                         options="{'no_create' :1}"
                         domain="[('category_id','=',uom_category_id)]"
                     />
+                    <field name="list_price_base_sale_uom" />
                 </field>
             </field>
         </record>
