[MIG] sale_order_note_template: Migration to 16.0

--- a/sale_order_note_template/views/sale_terms_template.xml
+++ b/sale_order_note_template/views/sale_terms_template.xml
@@ -36,9 +36,11 @@
                             <field name="name" placeholder="Name" />
                         </h1>
                     </div>
-                    <group>
-                        <field name="text" nolabel="1" />
-                    </group>
+                    <notebook>
+                        <page>
+                            <field name="text" nolabel="1" />
+                        </page>
+                    </notebook>
                 </sheet>
             </form>
         </field>
